@@ -46,6 +46,9 @@ typedef enum {
     ERR_CACHE_ACCESS_DENIED,
     ERR_CACHE_MGR_ACCESS_DENIED,
     ERR_SQUID_SIGNATURE,	/* not really an error */
+    ERR_FTP_PUT_CREATED,	/* !error,a note that the file was created */
+    ERR_FTP_PUT_MODIFIED,	/* modified, !created*/
+    ERR_FTP_PUT_ERROR, 
     ERR_MAX
 } err_type;
 
